@@ -20,6 +20,7 @@ from __future__ import print_function
 
 import logging
 import sys
+import tempfile
 
 import importlab.environment
 import importlab.fs
@@ -58,6 +59,8 @@ def main():
   # Command line arguments overwrite file options.
   conf.populate_from(args)
   conf.inputs -= conf.exclude
+  if args.no_cache:
+    conf.output = tempfile.mkdtemp()
   if not conf.pythonpath:
     conf.pythonpath = environment.compute_pythonpath(conf.inputs)
   logging.info('\n  '.join(['Configuration:'] + str(conf).split('\n')))
