@@ -1,6 +1,7 @@
 Version (upcoming)
 * Simplify the text pytype prints to the terminal.
 * Rename the default pytype output directory from pytype_output to .pytype.
+* Add a --no-cache option to send pytype output to a temporary directory.
 
 Version 2019.03.27
 * Support `# type: ignore` on import lines in pyi files.
